--- a/index.html
+++ b/index.html
@@ -2,8 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/mainKitty.png" />
+    <link rel="icon" type="image/png" href="/mainKitty.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Shivam Singh | Portfolio" />
+    <meta
+      property="og:description"
+      content="Explore Shivam Singh's professional portfolio featuring innovative web development projects, creative UI/UX design, and cutting-edge frontend experiments."
+    />
+    <meta property="og:image" content="/mainKitty.webp" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Shivam Singh | Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Explore Shivam Singh's professional portfolio featuring innovative web development projects, creative UI/UX design, and cutting-edge frontend experiments."
+    />
+    <meta
+      name="twitter:image"
+      content="https://yourdomain.com/mainKitty.webp"
+    />
+
     <title>Shivam Singh | Portfolio</title>
   </head>
   <body>
