--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="Explore Shivam Singh's professional portfolio featuring innovative web development projects, creative UI/UX design, and cutting-edge frontend experiments."
     />
     <meta property="og:image" content="/mainKitty.webp" />
-    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:url" content="https://portfolio-ten-iota-tixiz0p0ve.vercel.app/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags -->
@@ -24,7 +24,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://yourdomain.com/mainKitty.webp"
+      content="/mainKitty.webp"
     />
 
     <title>Shivam Singh | Portfolio</title>
