--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <meta property="og:title" content="Shivam Singh | Portfolio" />
     <meta
       property="og:description"
-      content="Explore Shivam Singh's professional portfolio featuring innovative web development projects, creative UI/UX design, and cutting-edge frontend experiments."
+      content="Hi, I’m Shivam Singh — welcome to my portfolio! Here, you’ll find a collection of web projects I’ve built with creativity, clean design, and an enthusiasm for modern frontend development."
     />
     <meta property="og:image" content="/mainKitty.webp" />
-    <meta property="og:url" content="https://portfolio-ten-iota-tixiz0p0ve.vercel.app/" />
+    <meta
+      property="og:url"
+      content="https://portfolio-ten-iota-tixiz0p0ve.vercel.app/"
+    />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags -->
@@ -20,12 +23,9 @@
     <meta name="twitter:title" content="Shivam Singh | Portfolio" />
     <meta
       name="twitter:description"
-      content="Explore Shivam Singh's professional portfolio featuring innovative web development projects, creative UI/UX design, and cutting-edge frontend experiments."
+      content="Hi, I’m Shivam Singh — welcome to my portfolio! Here, you’ll find a collection of web projects I’ve built with creativity, clean design, and an enthusiasm for modern frontend development."
     />
-    <meta
-      name="twitter:image"
-      content="/mainKitty.webp"
-    />
+    <meta name="twitter:image" content="/mainKitty.webp" />
 
     <title>Shivam Singh | Portfolio</title>
   </head>
